--- a/app/gradle/libs.versions.toml
+++ b/app/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version = "2.8.6" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
