--- a/.github/workflows/app_ci.yml
+++ b/.github/workflows/app_ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./app
+        working-directory: ./plantos-app
 
     steps:
       - uses: actions/checkout@v4
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: debug-apk
-          path: app/app/build/outputs/apk/debug/
+          path: plantos-app/app/build/outputs/apk/debug/
           retention-days: 7
 
   test:
@@ -45,7 +45,7 @@ jobs:
     needs: build
     defaults:
       run:
-        working-directory: ./app
+        working-directory: ./plantos-app
 
     steps:
       - uses: actions/checkout@v4
@@ -71,15 +71,15 @@ jobs:
         with:
           name: test-results
           path: |
-            app/app/build/reports/tests/
-            app/app/build/test-results/
+            plantos-app/app/build/reports/tests/
+            plantos-app/app/build/test-results/
           retention-days: 7
 
   lint:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./app
+        working-directory: ./plantos-app
 
     steps:
       - uses: actions/checkout@v4
@@ -105,6 +105,6 @@ jobs:
         with:
           name: lint-results
           path: |
-            app/app/build/reports/lint-results-debug.html
-            app/app/build/reports/lint-results-debug.xml
+            plantos-app/app/build/reports/lint-results-debug.html
+            plantos-app/app/build/reports/lint-results-debug.xml
           retention-days: 7
