--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -9,13 +9,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@plantos/admin-proto": "workspace:*",
     "protobufjs": "^7.3.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/ws": "^8.5.10",
-    "protobufjs-cli": "^2.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.3.3"
   }
