build(app): Use probuf gradle plugin

--- a/plantos-app/gradle/libs.versions.toml
+++ b/plantos-app/gradle/libs.versions.toml
@@ -32,4 +32,4 @@ protobuf-kotlin-lite = { module = "com.google.protobuf:protobuf-kotlin-lite", ve
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+protobuf = { id = "com.google.protobuf", version = "0.9.6" }
