chore: Add "private: true" to monorepo packages

--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "plantos-mock-server",
   "version": "1.0.0",
+  "private": true,
   "description": "Mock PlantOS hub server for development",
   "scripts": {
     "dev": "tsx src/index.ts",
