--- a/shared/admin-proto/package.json
+++ b/shared/admin-proto/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@plantos/admin-proto",
   "version": "1.0.0",
+  "private": true,
   "description": "Shared protocol utilities for PlantOS",
   "main": "src/index.ts",
   "types": "src/index.ts",
