--- a/shared/admin-proto/package.json
+++ b/shared/admin-proto/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "protobufjs": "^7.3.0"
   },
+  "scripts": {
+    "typecheck": "tsc --noEmit"
+  },
   "devDependencies": {
     "@types/node": "^25.2.2",
     "protobufjs-cli": "^1.1.2",
