chore: Add husky with prettier and pre-commit hooks

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,4 @@
 packages:
-  - 'admin-protocol-tests'
-  - 'mock-server'
-  - 'shared/*'
+  - "admin-protocol-tests"
+  - "mock-server"
+  - "shared/*"
