--- a/.github/workflows/ts_typecheck.yml
+++ b/.github/workflows/ts_typecheck.yml
@@ -24,8 +24,14 @@ jobs:
           node-version: "20"
           cache: "pnpm"
 
+      - name: Install just
+        run: sudo apt-get update && sudo apt-get install -y just
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: Compile protobuf definitions
+        run: just proto-generate-shared
 
       - name: Run TypeScript typecheck
         run: pnpm -r typecheck
