feat: add encryption support for admin protocol tests
- Implement AES-256-GCM encryption with HKDF-SHA256 key derivation
- Move encryption utilities to shared admin-proto module
- Add comprehensive test suite covering handshake, operations, and
errors

--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "plantos-mock-server",
+  "name": "@plantos/mock-server",
   "version": "1.0.0",
   "private": true,
   "description": "Mock PlantOS hub server for development",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "tsx src/index.ts",
-    "test": "tsx test/integration.ts",
-    "test:load": "tsx test/load.ts",
+    "dev": "tsx src/main.ts",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
