--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "typecheck": "pnpm -r typecheck",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint": "pnpm run typecheck && pnpm run format:check"
+    "lint": "pnpm run typecheck && pnpm run format:check",
+    "test": "pnpm run -r test"
   },
   "devDependencies": {
     "husky": "^9.1.7",
