ci: Add test ts job to CI

--- a/.github/workflows/ts_ci.yml
+++ b/.github/workflows/ts_ci.yml
@@ -1,4 +1,4 @@
-name: TypeScript Typecheck
+name: TS CI
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  typecheck:
+  lint:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -38,4 +38,37 @@ jobs:
         run: ./just proto-generate-shared
 
       - name: Run TypeScript typecheck
-        run: pnpm -r typecheck
+        run: pnpm lint
+
+  test:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "pnpm"
+
+      - name: Install just
+        run: |
+          curl --proto '=https' --tlsv1.2 -fsSL https://github.com/casey/just/releases/download/1.46.0/just-1.46.0-x86_64-unknown-linux-musl.tar.gz | tar -xz -C . just
+          chmod +x ./just
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Compile protobuf definitions
+        run: ./just proto-generate-shared
+
+      - name: Run tests
+        run: pnpm test
