--- a/.github/workflows/app_ci.yml
+++ b/.github/workflows/app_ci.yml
@@ -16,21 +16,7 @@ jobs:
         working-directory: ./plantos-app
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: "21"
-          distribution: "temurin"
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          cache-read-only: ${{ github.ref != 'refs/heads/main' }}
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      - uses: ./.github/actions/android-setup
 
       - name: Build with Gradle
         run: ./gradlew assembleDebug
@@ -51,19 +37,7 @@ jobs:
         working-directory: ./plantos-app
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: "21"
-          distribution: "temurin"
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      - uses: ./.github/actions/android-setup
 
       - name: Run unit tests
         run: ./gradlew testDebugUnitTest
@@ -87,19 +61,7 @@ jobs:
         working-directory: ./plantos-app
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: "21"
-          distribution: "temurin"
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      - uses: ./.github/actions/android-setup
 
       - name: Run lint
         run: ./gradlew lintDebug
