ci: Update gradlew path for common app setup

--- a/.github/actions/android-setup/action.yml
+++ b/.github/actions/android-setup/action.yml
@@ -26,5 +26,5 @@ runs:
         cache-read-only: ${{ github.ref != 'refs/heads/main' }}
 
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: chmod +x plantos-app/gradlew
       shell: bash
